SERVER-13899 Forbid whole index scan on plugin index to provide sort